--- a/notebookd1503b7384.ipynb
+++ b/notebookd1503b7384.ipynb
@@ -3,22 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f89c414c",
+   "id": "4069fee5",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-03-04T17:44:46.902155Z",
-     "iopub.status.busy": "2022-03-04T17:44:46.900381Z",
-     "iopub.status.idle": "2022-03-04T17:44:46.914312Z",
-     "shell.execute_reply": "2022-03-04T17:44:46.915041Z",
-     "shell.execute_reply.started": "2022-03-04T17:42:29.423425Z"
+     "iopub.execute_input": "2022-03-04T19:32:15.627065Z",
+     "iopub.status.busy": "2022-03-04T19:32:15.625823Z",
+     "iopub.status.idle": "2022-03-04T19:32:15.639564Z",
+     "shell.execute_reply": "2022-03-04T19:32:15.640108Z",
+     "shell.execute_reply.started": "2022-03-04T19:10:51.755302Z"
     },
     "papermill": {
-     "duration": 0.024321,
-     "end_time": "2022-03-04T17:44:46.915477",
+     "duration": 0.02647,
+     "end_time": "2022-03-04T19:32:15.640424",
      "exception": false,
-     "start_time": "2022-03-04T17:44:46.891156",
+     "start_time": "2022-03-04T19:32:15.613954",
      "status": "completed"
     },
     "tags": []
@@ -53,6 +53,451 @@
     "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
     "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1b5b37d1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-04T19:32:15.662526Z",
+     "iopub.status.busy": "2022-03-04T19:32:15.661804Z",
+     "iopub.status.idle": "2022-03-04T19:32:15.697660Z",
+     "shell.execute_reply": "2022-03-04T19:32:15.698163Z",
+     "shell.execute_reply.started": "2022-03-04T19:10:56.109647Z"
+    },
+    "papermill": {
+     "duration": 0.048984,
+     "end_time": "2022-03-04T19:32:15.698347",
+     "exception": false,
+     "start_time": "2022-03-04T19:32:15.649363",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500   NaN        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500   NaN        S  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data = pd.read_csv(\"/kaggle/input/titanic/train.csv\")\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "411894f9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-04T19:32:15.721428Z",
+     "iopub.status.busy": "2022-03-04T19:32:15.720669Z",
+     "iopub.status.idle": "2022-03-04T19:32:15.742496Z",
+     "shell.execute_reply": "2022-03-04T19:32:15.743068Z",
+     "shell.execute_reply.started": "2022-03-04T19:11:02.327614Z"
+    },
+    "papermill": {
+     "duration": 0.03617,
+     "end_time": "2022-03-04T19:32:15.743296",
+     "exception": false,
+     "start_time": "2022-03-04T19:32:15.707126",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Kelly, Mr. James</td>\n",
+       "      <td>male</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>330911</td>\n",
+       "      <td>7.8292</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>893</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>363272</td>\n",
+       "      <td>7.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>894</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Myles, Mr. Thomas Francis</td>\n",
+       "      <td>male</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>240276</td>\n",
+       "      <td>9.6875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>895</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Wirz, Mr. Albert</td>\n",
+       "      <td>male</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>315154</td>\n",
+       "      <td>8.6625</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>896</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3101298</td>\n",
+       "      <td>12.2875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Pclass                                          Name     Sex  \\\n",
+       "0          892       3                              Kelly, Mr. James    male   \n",
+       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
+       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
+       "3          895       3                              Wirz, Mr. Albert    male   \n",
+       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
+       "\n",
+       "    Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
+       "0  34.5      0      0   330911   7.8292   NaN        Q  \n",
+       "1  47.0      1      0   363272   7.0000   NaN        S  \n",
+       "2  62.0      0      0   240276   9.6875   NaN        Q  \n",
+       "3  27.0      0      0   315154   8.6625   NaN        S  \n",
+       "4  22.0      1      1  3101298  12.2875   NaN        S  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data = pd.read_csv(\"/kaggle/input/titanic/test.csv\")\n",
+    "test_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0380b4bb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-04T19:32:15.771935Z",
+     "iopub.status.busy": "2022-03-04T19:32:15.771231Z",
+     "iopub.status.idle": "2022-03-04T19:32:15.780718Z",
+     "shell.execute_reply": "2022-03-04T19:32:15.779616Z",
+     "shell.execute_reply.started": "2022-03-04T19:11:10.822266Z"
+    },
+    "papermill": {
+     "duration": 0.027863,
+     "end_time": "2022-03-04T19:32:15.781017",
+     "exception": false,
+     "start_time": "2022-03-04T19:32:15.753154",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% of women survived:  0.7420382165605095\n"
+     ]
+    }
+   ],
+   "source": [
+    "women = train_data.loc[train_data.Sex == 'female']['Survived']\n",
+    "rate_women = sum(women)/len(women)\n",
+    "print(\"% of women survived: \", rate_women)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a32369b0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-04T19:32:15.805171Z",
+     "iopub.status.busy": "2022-03-04T19:32:15.804442Z",
+     "iopub.status.idle": "2022-03-04T19:32:15.811043Z",
+     "shell.execute_reply": "2022-03-04T19:32:15.811607Z",
+     "shell.execute_reply.started": "2022-03-04T19:11:20.556146Z"
+    },
+    "papermill": {
+     "duration": 0.02005,
+     "end_time": "2022-03-04T19:32:15.811778",
+     "exception": false,
+     "start_time": "2022-03-04T19:32:15.791728",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% of men survived:  0.18890814558058924\n"
+     ]
+    }
+   ],
+   "source": [
+    "men = train_data.loc[train_data.Sex == 'male']['Survived']\n",
+    "rate_men = sum(men)/len(men)\n",
+    "print(\"% of men survived: \", rate_men)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8beb1aad",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-04T19:32:15.835499Z",
+     "iopub.status.busy": "2022-03-04T19:32:15.834869Z",
+     "iopub.status.idle": "2022-03-04T19:32:17.396239Z",
+     "shell.execute_reply": "2022-03-04T19:32:17.395032Z",
+     "shell.execute_reply.started": "2022-03-04T19:29:16.186141Z"
+    },
+    "papermill": {
+     "duration": 1.574529,
+     "end_time": "2022-03-04T19:32:17.396435",
+     "exception": false,
+     "start_time": "2022-03-04T19:32:15.821906",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your submission was successfully saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "y = train_data[\"Survived\"]\n",
+    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\"]\n",
+    "X = pd.get_dummies(train_data[features])\n",
+    "X_test = pd.get_dummies(test_data[features])\n",
+    "model = RandomForestClassifier(n_estimators = 100, max_depth = 5, random_state = 1)\n",
+    "model.fit(X, y)\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "output = pd.DataFrame({'PassengerId': test_data.PassengerId, 'Survived': predictions})\n",
+    "output.to_csv('submission.csv', index=False)\n",
+    "print(\"Your submission was successfully saved!\")"
+   ]
   }
  ],
  "metadata": {
@@ -75,14 +520,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.829694,
-   "end_time": "2022-03-04T17:44:47.532666",
+   "duration": 12.705046,
+   "end_time": "2022-03-04T19:32:18.118466",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-03-04T17:44:37.702972",
+   "start_time": "2022-03-04T19:32:05.413420",
    "version": "2.3.3"
   }
  },
